--- a/works/css/work-styles.scss
+++ b/works/css/work-styles.scss
@@ -12,8 +12,8 @@ body.dark-mode{
    --mainBG: hsl(0, 0%, 0%);
    --black: hsl(0, 0%, 100%);
    --darkgrey: #A4A4A4;
-   --lightgrey: #ffffff;
-   --navblack: hsl(0, 0%, 0%);
+   --lightgrey: black;
+   --navblack: white;
 }
 
 // font
@@ -98,21 +98,22 @@ li{
     position: relative;
     z-index: 25;
     filter: none;
+    overflow: hidden;
     li{
         display: flex;
-        width: 12vw;
         height: 55px;
+        width: 10vw;
         padding: 6px 9px;
         align-items: flex-end;
         background-color: var(--lightgrey);
         font-size: clamp(0.8rem, 0.9vw, 1rem);
         border-radius: 10px;
         border: 1px solid var(--darkgrey);
-        cursor: pointer;
     }
+        
 
     .information-nav{
-        width: 6vw;
+        width: 20%;
         color: var(--darkgrey);
         &:hover{
             color: var(--navblack);
@@ -120,7 +121,7 @@ li{
     }
 
     .socials-nav{
-        width: 6vw;
+        width: 20%;
         color: var(--darkgrey);
         &:hover{
             color: var(--navblack);
@@ -128,7 +129,7 @@ li{
     }
 
     #toggle-dark-mode{
-        width: 6vw;
+        width: 20%;
         color: var(--darkgrey);
         &:hover{
             color: var(--navblack);
@@ -163,6 +164,7 @@ li{
             border-radius: 10px;
             border: 1px solid var(--darkgrey);
             background-color: var(--lightgrey);
+            color: var(--black);
             width: 3vw;
             height: 3vw;
             display: grid;
@@ -178,6 +180,7 @@ li{
             border-radius: 10px;
             border: 1px solid var(--darkgrey);
             background-color: var(--lightgrey);
+            color: var(--black);
             display: flex;
             align-items: center;
             padding: 0 1vw;
@@ -226,7 +229,7 @@ li{
             }
 
             &:hover svg {
-                fill: black;
+                fill: var(--black);
             }
         }
 
@@ -239,6 +242,7 @@ li{
             place-content: center;
             border-radius: 10px;
             border: 1px solid var(--darkgrey);
+            color: var(--black);
         }
     }
 }
